# ghaf-installation-wizard

./: README.md  flake.nix  pyproject.toml
wizard/: __init__.py  utils.py  validators.py
